--- a/src/MarvelCards/MarvelCards.Android/MarvelCards.Android.csproj
+++ b/src/MarvelCards/MarvelCards.Android/MarvelCards.Android.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="CardsView">
       <Version>2.1.7</Version>
     </PackageReference>
+    <PackageReference Include="SkiaSharp.Views.Forms">
+      <Version>1.68.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
