--- a/src/MarvelCards/MarvelCards.iOS/MarvelCards.iOS.csproj
+++ b/src/MarvelCards/MarvelCards.iOS/MarvelCards.iOS.csproj
@@ -125,6 +125,9 @@
     <PackageReference Include="CardsView">
       <Version>2.1.7</Version>
     </PackageReference>
+    <PackageReference Include="SkiaSharp.Views.Forms">
+      <Version>1.68.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
