--- a/src/MarvelCards/MarvelCards/MarvelCards.csproj
+++ b/src/MarvelCards/MarvelCards/MarvelCards.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="CardsView" Version="2.1.7" />
+    <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
